# movie_recommendation

./: .gitignore  .pre-commit-config.yaml  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
.github/workflows/: version-bump.yml
movie_recommendation/: __main__.py  base.py  cli.py
tests/: test_base.py
